# hellotworld

./: .gitignore  CMakeLists.txt  build.sh  clean.sh
buildSrc/: CMakeLists.txt  build.sh
include/: tworld.h
src/: HelloTworld.cpp  hellotworld.cpp
